# blobby

./: CMakeLists.txt  README.md  compile-shaders.sh  compile.sh  compile_flags.txt
cmake/: superbuild.cmake
shader/: f_simple.sc  v_simple.sc  varying.def.sc
shaders/: common.sh  f_simple.sc  sdf.sh
src/: blob.h  constants.h  context.h  engine.cpp  engine.h  file-ops.h  main.cpp  math.h  renderer.cpp  renderer.h  terrain.cpp  terrain.h
